websocket-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-service
  labels:
    app: websocket-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: websocket-service
  template:
    metadata:
      labels:
        app: websocket-service
    spec:
      containers:
        - name: websocket-service
          image: koushik172/web-socket-service:build-3
          ports:
            - containerPort: 5505
---

apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  selector:
    app: websocket-service
  ports:
    - protocol: TCP
      port: 5505
      targetPort: 5505
